Now code can work  with any number of points